--- a/zipnode_animate/projnode/views/home.ejs
+++ b/zipnode_animate/projnode/views/home.ejs
@@ -15,7 +15,7 @@
     <div class="navbar">
         <ul class="nav-list">
             <li><a href="#">Home</a></li>
-            <li><a href="verify.html">License Verification</a></li>
+            <li><a href="./verify.ejs">License Verification</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
         <div class="rightNav">
