--- a/zipnode_animate/projnode/views/index.ejs
+++ b/zipnode_animate/projnode/views/index.ejs
@@ -25,7 +25,7 @@
 
     <!-- Libraries Stylesheet -->
     <link href="lib/animate/animate.min.css" rel="stylesheet">
-
+    
     <style>
         .hidden {
             display: none;
@@ -76,12 +76,14 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="#">Brand</a>
+        <a class="navbar-brand" href="#">
+            <img src="" alt="Logo" style="height: 90px; width: 90px;">
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
                 </li>
@@ -95,6 +97,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
+            <!-- <img src="./1000066349-removebg-preview.png" alt="Additional Image" style="height: 50px; width: auto; margin-left: 20px;"> -->
         </div>
     </nav>
     <!-- Navbar End -->
