--- a/zipnode_animate/projnode/views/index.ejs
+++ b/zipnode_animate/projnode/views/index.ejs
@@ -76,8 +76,9 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg">
+        <img src="logo.png" alt="Logo" style="height: 170px; width: 90px; padding-bottom: 10px;">
         <a class="navbar-brand" href="#">
-            <img src="" alt="Logo" style="height: 90px; width: 90px;">
+           
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
