--- a/zipnode_animate/projnode/views/index.ejs
+++ b/zipnode_animate/projnode/views/index.ejs
@@ -76,7 +76,7 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg">
-        <img src="logo.png" alt="Logo" style="height: 170px; width: 90px; padding-bottom: 10px;">
+        <img src="logo.png" alt="Logo" style="height: 190px; width: 110px; padding-bottom: 10px; margin-left: 50px; margin-top: 25px">
         <a class="navbar-brand" href="#">
            
         </a>
@@ -98,6 +98,7 @@
                     <a class="nav-link" href="#">Contact</a>
                 </li>
             </ul>
+            <button class="btn neon-button">Sign up</button> 
             <!-- <img src="./1000066349-removebg-preview.png" alt="Additional Image" style="height: 50px; width: auto; margin-left: 20px;"> -->
         </div>
     </nav>
